--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "chart.js": "^4.4.3",
     "cookies-next": "^4.0.0",
     "cssnano": "^7.0.4",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.3.6",
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.363.0",
     "mongoose": "^8.2.4",
     "next": "^14.1.4",
@@ -52,6 +54,7 @@
     "react-email": "^2.1.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
     "recharts": "^2.12.7",
